--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     name: <input type="number" id="myNumber">
-    <button onclick="myFuction()">Try it </button>   
+    <button onclick="myFuction()">Try it </button>  
+
+    name: <input type="number" id="myNumber">
+    <button onclick="myFuction()">Try it </button>
+
+    name: <input type="number" id="myNumber">
+    <button onclick="myFuction()">Try it </button>
+
+
 </body>
 </html>
