try to form triangle

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <script src="./index.js"></script>
 </head>
 <body>
-    name: <input type="number" id="myNumber">
+    name: <input type="number" id="fisrtSide">
     <button onclick="myFuction()">Try it </button>  
 
-    name: <input type="number" id="myNumber">
+    name: <input type="number" id="secondSide">
     <button onclick="myFuction()">Try it </button>
 
-    name: <input type="number" id="myNumber">
+    name: <input type="number" id="thirdSide">
     <button onclick="myFuction()">Try it </button>
 
 
