--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
     name: <input type="number" id="fisrtSide">
-    <button onclick="myFuction()">Try it </button>  
-
     name: <input type="number" id="secondSide">
-    <button onclick="myFuction()">Try it </button>
-
     name: <input type="number" id="thirdSide">
-    <button onclick="myFuction()">Try it </button>
-
-
+    <button onclick="myFuction()">Try it </button>  
 </body>
 </html>
