--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     name: <input type="number" id="secondSide">
     name: <input type="number" id="thirdSide">
     <button onclick="myFuction()">Try it </button>  
-    
+    <h1>TRIANGLE TRACKER</h1>
 </body>
 </html>
