--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
          geometry any three points, when non-collinear, determine a unique 
         triangle and simultaneously, a unique plane (i.e. a two-dimensional Euclidean space).</p>
       <h2>TYPES OF TRIANGLES</h2>
+       <ol>
+           <li>Equilateral triangle</li>
+           <li>Isosceles triangle</li>
+           <li>Scalene Triangle.</li>
+       </ol>
 </body>
 </html>
