--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <button onclick="myFuction()">Try it </button>  
     <h1>TRIANGLE TRACKER</h1>
 
-    <p><strong>A triangle</strong> is a polygon with three edges and three vertices. It is one of the basic
-         shapes in geometry. A triangle with vertices A, B, and C is denoted . In Euclidean 
+    <p><strong>A triangle</strong> is a polygon with three edges and three vertices.
+         It is one of the basic
+         shapes in geometry. A triangle with vertices A, B, and C is denoted . 
+         In Euclidean 
          geometry any three points, when non-collinear, determine a unique 
         triangle and simultaneously, a unique plane (i.e. a two-dimensional Euclidean space).</p>
       <h2>TYPES OF TRIANGLES</h2>
