add explanation of triangle

--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
       <h2>TYPES OF TRIANGLES</h2>
        <ol>
            <li>Equilateral triangle</li>
+               The Equilateral triangle shown on the left has three congruent:
+               sides and three congruent angles. ...
            <li>Isosceles triangle</li>
+               The Isosceles triangle shown on the left ,
+               has two equal sides and two equal angles.
            <li>Scalene Triangle.</li>
+               The Scalene Triangle has no congruent sides. 
        </ol>
 </body>
 </html>
