--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         triangle and simultaneously, a unique plane (i.e. a two-dimensional Euclidean space).</p>
       <h2>TYPES OF TRIANGLES</h2>
        <ol>
-           <li>Equilateral triangle</li>
+           <li><em>Equilateral triangle</em></li>
                The Equilateral triangle shown on the left has three congruent:
                sides and three congruent angles. ...
-           <li>Isosceles triangle</li>
+           <li><em>Isosceles triangle</em></li>
                The Isosceles triangle shown on the left ,
                has two equal sides and two equal angles.
-           <li>Scalene Triangle.</li>
+           <li><em>Scalene Triangle</em>.</li>
                The Scalene Triangle has no congruent sides. 
        </ol>
 </body>
