--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
         triangle and simultaneously, a unique plane (i.e. a two-dimensional Euclidean space).</p>
       <h2>TYPES OF TRIANGLES</h2>
        <ol>
-           <li><em>Equilateral triangle</em></li>
+           <li><em><strong>Equilateral triangle</strong></em></li>
                The Equilateral triangle shown on the left has three congruent:
                sides and three congruent angles. ...
-           <li><em>Isosceles triangle</em></li>
+           <li><em><strong>Isosceles triangle</strong></em></li>
                The Isosceles triangle shown on the left ,
                has two equal sides and two equal angles.
-           <li><em>Scalene Triangle</em>.</li>
+           <li><em><strong>Scalene Triangle</strong></em>.</li>
                The Scalene Triangle has no congruent sides. 
        </ol>
+
 </body>
 </html>
