--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
            <li><em><strong>Equilateral triangle</strong></em></li>
                The Equilateral triangle shown on the left has three congruent:
                sides and three congruent angles. ...
+               <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Equilateral-triangle-heights.svg"width="200"height="200">
            <li><em><strong>Isosceles triangle</strong></em></li>
                The Isosceles triangle shown on the left ,
                has two equal sides and two equal angles.
