add image of isoscele

--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
         triangle and simultaneously, a unique plane (i.e. a two-dimensional Euclidean space).</p>
       <h2>TYPES OF TRIANGLES</h2>
        <ol>
+        <div id="img">
            <li><em><strong>Equilateral triangle</strong></em></li>
                The Equilateral triangle shown on the left has three congruent:
                sides and three congruent angles. ...
-               <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Equilateral-triangle-heights.svg"width="200"height="200">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Equilateral-triangle-heights.svg"width="200"height="200">
            <li><em><strong>Isosceles triangle</strong></em></li>
+           <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Triangle.Isosceles.svg"width="200"height="200">
                The Isosceles triangle shown on the left ,
                has two equal sides and two equal angles.
            <li><em><strong>Scalene Triangle</strong></em>.</li>
                The Scalene Triangle has no congruent sides. 
-       </ol>
-
+            </div>
+            </ol>
+     
 </body>
 </html>
