add image of scalene

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                The Isosceles triangle shown on the left ,
                has two equal sides and two equal angles.
            <li><em><strong>Scalene Triangle</strong></em>.</li>
+           <img src="http://mathworld.wolfram.com/images/eps-gif/ScaleneTriangles_1001.gif"
                The Scalene Triangle has no congruent sides. 
             </div>
             </ol>
