add link in index.html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="index.js"></script>
+    <link rel="stylesheet"type="style/css"href="index.css">
 </head>
 <body>
-    name: <input type="number" id="fisrtSide">
-    name: <input type="number" id="secondSide">
-    name: <input type="number" id="thirdSide">
+    side1: <input type="number" id="fisrtSide">
+    side2: <input type="number" id="secondSide">
+    side3: <input type="number" id="thirdSide">
     <button onclick="myFuction()">Try it </button>  
     <h1>TRIANGLE TRACKER</h1>
 
