add background image

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="index.js"></script>
-    <link rel="stylesheet"type="style/css"href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    side1: <input type="number" id="fisrtSide">
-    side2: <input type="number" id="secondSide">
-    side3: <input type="number" id="thirdSide">
+    side1: <input type="number" id="Side1">
+    side2: <input type="number" id="Side2">
+    side3: <input type="number" id="Side3">
     <button onclick="myFuction()">Try it </button>  
     <h1>TRIANGLE TRACKER</h1>
 
