add behovior in README.md

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    side1:<input type="number" id="Side1">
-    side2:<input type="number" id="Side2">
-    side3:<input type="number" id="Side3">
-    
+    side1:<input type="number" id="length1">
+    side2:<input type="number" id="length2">
+    side3:<input type="number" id="length3">
+
     <button onclick="myFuction()">Try it </button>  
     <h1>TRIANGLE TRACKER</h1>
+    <div id="equilateral"
 
     <p><strong>A triangle</strong> is a polygon with three edges and three vertices.
          It is one of the basic
