--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     side3:<input type="number" id="length3">
 
     <button onclick="myFuction()">Try it </button>  
-    <h1>TRIANGLE TRACKER</h1>
-    <div id="equilateral"
+    <h1><em>TRIANGLE TRACKER</em></h1>
 
     <p><strong>A triangle</strong> is a polygon with three edges and three vertices.
          It is one of the basic
@@ -23,23 +22,23 @@
          In Euclidean 
          geometry any three points, when non-collinear, determine a unique 
         triangle and simultaneously, a unique plane (i.e. a two-dimensional Euclidean space).</p>
-      <h2>TYPES OF TRIANGLES</h2>
+    <h2>TYPES OF TRIANGLES</h2>
        <ol>
-        <div id="img">
-           <li><em><strong>Equilateral triangle</strong></em></li>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Triangle.Equilateral.svg/220px-Triangle.Equilateral.svg.png">
-           The Equilateral triangle shown on the left has three congruent:
+            <div id="img">
+            <li><em><strong>Equilateral triangle</strong></em></li>
+             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Triangle.Equilateral.svg/220px-Triangle.Equilateral.svg.png">
+            The Equilateral triangle shown on the left has three congruent:
                sides and three congruent angles. ...
         
-           <li><em><strong>Isosceles triangle</strong></em></li>
-           <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Triangle.Isosceles.svg"width="200"height="200">
+            <li><em><strong>Isosceles triangle</strong></em></li>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Triangle.Isosceles.svg"width="200"height="200">
             The Isosceles triangle shown on the left ,
                has two equal sides and two equal angles.
-           <li><em><strong>Scalene Triangle</strong></em>.</li>
-           <img src="http://mathworld.wolfram.com/images/eps-gif/ScaleneTriangles_1001.gif">
+            <li><em><strong>Scalene Triangle</strong></em>.</li>
+            <img src="http://mathworld.wolfram.com/images/eps-gif/ScaleneTriangles_1001.gif">
             The Scalene Triangle has no congruent sides. 
             </div>
-            </ol>
+        </ol>
      
 </body>
 </html>
