--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src="index.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css">
-</head>
-<body>
-    side1:<input type="number" id="length1">
-    side2:<input type="number" id="length2">
-    side3:<input type="number" id="length3">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+        <script src="index.js"></script>
+        <link rel="stylesheet" type="text/css" href="index.css">
+   </head>
+   <body>
+         side1=<input type="number" id="side1">
+         side2=<input type="number" id="side2">
+         side3=<input type="number" id="side3">
 
-    <button onclick="myFuction()">Try it </button>  
-    <h1><em>TRIANGLE TRACKER</em></h1>
+         <button onclick="myFuction()">Try it </button>  
+         <h1><em>TRIANGLE TRACKER</em></h1>
 
-    <p><strong>A triangle</strong> is a polygon with three edges and three vertices.
+         <p><strong>A triangle</strong> is a polygon with three edges and three vertices.
          It is one of the basic
          shapes in geometry. A triangle with vertices A, B, and C is denoted . 
          In Euclidean 
          geometry any three points, when non-collinear, determine a unique 
-        triangle and simultaneously, a unique plane (i.e. a two-dimensional Euclidean space).</p>
-    <h2>TYPES OF TRIANGLES</h2>
-       <ol>
-            <div id="img">
-            <li><em><strong>Equilateral triangle</strong></em></li>
-             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Triangle.Equilateral.svg/220px-Triangle.Equilateral.svg.png">
-            The Equilateral triangle shown on the left has three congruent:
-               sides and three congruent angles. ...
+         triangle and simultaneously, a unique plane (i.e. a two-dimensional Euclidean space).</p>
+         <h2>TYPES OF TRIANGLES</h2>
+            <ol>
+               <div id="img">
+                <li><em><strong>Equilateral triangle</strong></em></li>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Triangle.Equilateral.svg/220px-Triangle.Equilateral.svg.png">
+                 The Equilateral triangle shown on the left has three congruent:
+                sides and three congruent angles. ...
         
-            <li><em><strong>Isosceles triangle</strong></em></li>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Triangle.Isosceles.svg"width="200"height="200">
-            The Isosceles triangle shown on the left ,
+                <li><em><strong>Isosceles triangle</strong></em></li>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Triangle.Isosceles.svg"width="200"height="200">
+                 The Isosceles triangle shown on the left ,
                has two equal sides and two equal angles.
-            <li><em><strong>Scalene Triangle</strong></em>.</li>
-            <img src="http://mathworld.wolfram.com/images/eps-gif/ScaleneTriangles_1001.gif">
-            The Scalene Triangle has no congruent sides. 
-            </div>
-        </ol>
+                <li><em><strong>Scalene Triangle</strong></em>.</li>
+                <img src="http://mathworld.wolfram.com/images/eps-gif/ScaleneTriangles_1001.gif">
+                The Scalene Triangle has no congruent sides. 
+              </div>
+            </ol>
      
-</body>
+    </body>
 </html>
